# ChangeLog for dev-ruby/churn
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*churn-0.0.15 (15 Dec 2011)

  15 Dec 2011; Hans de Graaff <graaff@gentoo.org> +churn-0.0.15.ebuild:
  Version bump.

*churn-0.0.13-r1 (06 Oct 2011)

  06 Oct 2011; Hans de Graaff <graaff@gentoo.org> +churn-0.0.13-r1.ebuild:
  We don't package json_pure so don't mention it in the gemspec.

  14 Jun 2011; Hans de Graaff <graaff@gentoo.org> churn-0.0.13.ebuild:
  Add x86 keyword.

  14 Jun 2011; Hans de Graaff <graaff@gentoo.org> -churn-0.0.11.ebuild,
  -churn-0.0.12.ebuild:
  Remove old versions.

*churn-0.0.13 (07 Mar 2011)

  07 Mar 2011; Hans de Graaff <graaff@gentoo.org> +churn-0.0.13.ebuild:
  Version bump.

*churn-0.0.12 (24 Mar 2010)

  24 Mar 2010; Hans de Graaff <graaff@gentoo.org> +churn-0.0.12.ebuild:
  Version bump.

*churn-0.0.11 (12 Feb 2010)

  12 Feb 2010; Hans de Graaff <graaff@gentoo.org> +churn-0.0.11.ebuild,
  +metadata.xml:
  Initial import, new dependency for dev-ruby/metric_fu.
