@@ -3,15 +3,10 @@ Hash: SHA256
 
 DIST churn-0.0.13.gem 20992 RMD160 789348933a47540cdf207bee78f50430d9850c6a SHA1 bce0d15787180aa87f3ad2e7290aa2c32f180b1a SHA256 38b358d018ee5e0dff874c91670876309acdaa1bf1b525f93bd2f8098765ba99
 DIST churn-0.0.15.gem 23040 RMD160 2ec8a8b523c7460488fadb064354ef7194001106 SHA1 133fe99de7c752e33346f217db5e9db56a7fbb90 SHA256 2d442d64d32325164cbc3c1407946c71bd5688e9410b0c44fb875252e91a08b1
-EBUILD churn-0.0.13-r1.ebuild 1053 RMD160 ccc2ce947baaa9ac41c50dd63ed998f002ff809b SHA1 2aa6aa69af6e6c3a33e62facbf494772468b0d46 SHA256 437d1dda32d7d4da79fac25a7186b0387eb02249fc3a86be1bbaff69db652439
-EBUILD churn-0.0.13.ebuild 961 RMD160 e41f65e56dc960fcd32a321d0e88fe18e1c3a121 SHA1 b3fb9bcea2f9076df3d20bede627de7bae04ed3a SHA256 0b37cfa68db520fb7d63a0152fb91ea1e959e60229484dd7561853f279e3ab1c
-EBUILD churn-0.0.15.ebuild 927 RMD160 4b2bff62d5f6459ba24e95a75006c6dccdd1d822 SHA1 7c9c11b24e72c4f699fed699a4fb3b7d8ee11851 SHA256 c43ffeedf374f2c5efb9c8d7a61d907655a220ee8c87f8551a886a866ce0a43e
-MISC ChangeLog 1029 RMD160 78ade6628c57d6bb7a2200897fe1145dfa55d0ea SHA1 2794ee5b2c7ede7b52a466f6bf6742adb3745339 SHA256 9c0f5ffef659c3e09a3e41aae006e0b7ab85cc8a52c00c152eafa2bf8a6871f7
-MISC metadata.xml 215 RMD160 682b22c57f2f17c789b244e2bb32fe15ca3fa332 SHA1 ccf017e39c3f44ac4b557da94f91096555cb1be2 SHA256 c058515dd6264789274b580e999ce4fbbb5c53c36a452bf7b32fd227980abcf8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk7qD+wACgkQiIP6VqMIqNcjogD9FppD1ydfqa6BrOxpRF226zBW
-WAw/sCHx9n5AdBPpH14A/1uvnWFQ1YsPvg4vtkxHqCCw/Zqgniwo+vPm7JupHfhf
-=zghB
+iF4EAREIAAYFAk8B0UQACgkQiIP6VqMIqNcAnAD+L1of2azMbmHT+c9xfdEJcaMB
+/09JA2jlW/X3W7nlmbIA/1lS1pg9/M2dz7GN3UrOF57CUYdp4G2JOkjQ+jcbZeNA
+=E7ik
 -----END PGP SIGNATURE-----
