@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/churn
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*churn-0.0.15-r1 (02 Jan 2012)
+
+  02 Jan 2012; Hans de Graaff <graaff@gentoo.org> -churn-0.0.15.ebuild,
+  +churn-0.0.15-r1.ebuild:
+  Fix gemspec: jeweler is not a runtime dependency.
 
 *churn-0.0.15 (15 Dec 2011)
 
